# kotti_dkbase

./: .gitignore  CHANGES.txt  MANIFEST.in  README.rst  maintenance.ini  setup.cfg  setup.py
kotti_dkbase/: __init__.py  config.ini  configure.zcml  debug.ini  maintenance.py  views.py
kotti_dkbase/kotti-overrides/static/: base.css
kotti_dkbase/kotti-overrides/templates/view/: document.pt  master.pt  nav-local.pt
kotti_dkbase/static/: edit.css  layout.css  maintenance.html  primary-navigation.css
kotti_dkbase/templates/: base-layout.pt  error-404.pt  error.pt
kotti_dkbase/templates/view/: base-layout.pt  error-404.pt  error.pt  layout.pt  master-body-page-header.pt  master-footer.pt  master-header.pt  master-kotti-headers.pt  primary-navigation.pt
kotti_dkbase/tests/: test_maintenance.py
