[metadata]
name = kotti_dkbase
version = 0.1.0b1
author = Christian Neumann
author-email = cneumann@datenkarussell.de
summary = Kotti setup and modifications for CMS projects of Datenkarussell
description-file = README.rst
home-page = https://github.com/chrneumann/kotti_dkbase
classifier =
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Framework :: Pylons
requires-dist =
    Kotti (==0.7a4)
    pyramid_zcml

[files]
packages = kotti_dkbase
package_data =
    kotti_dkbase = static/**/*
                   templates/**/*.pt
                   configure.zcml
                   *.ini
                   kotti-overrides/templates/**/*.pt
extra_files =
    README.rst
    CHANGES.txt
    runtests.py

[pytest]
addopts =
    --doctest-modules --doctest-glob='*.txt' --capture=no
    --cov=kotti_dkbase --cov-report=term-missing
    --ignore=kotti_dkbase/templates/
    kotti_dkbase/tests/
python_files = test*py